# serializer version: 1
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_display_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 255,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_display_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display brightness',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_brightness',
    'unique_id': '00000000-0000-4000-8000-000000000001_display_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_display_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Display brightness',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 255,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_display_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_quiet_display_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 255,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_quiet_display_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Quiet display brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Quiet display brightness',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'quiet_display',
    'unique_id': '00000000-0000-4000-8000-000000000001_quiet_display',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_quiet_display_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Quiet display brightness',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 255,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_quiet_display_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_quiet_ring_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 64,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_quiet_ring_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Quiet ring brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Quiet ring brightness',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'quiet_ring',
    'unique_id': '00000000-0000-4000-8000-000000000001_quiet_ring',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_quiet_ring_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Quiet ring brightness',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 64,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_quiet_ring_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_quiet_speaker_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_quiet_speaker_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Quiet speaker volume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Quiet speaker volume',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'quiet_volume',
    'unique_id': '00000000-0000-4000-8000-000000000001_quiet_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_quiet_speaker_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Quiet speaker volume',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_quiet_speaker_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_ring_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 64,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_ring_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ring brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ring brightness',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ring_brightness',
    'unique_id': '00000000-0000-4000-8000-000000000001_ring_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_ring_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Ring brightness',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 64,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_ring_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_speaker_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_speaker_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Speaker volume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Speaker volume',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '00000000-0000-4000-8000-000000000001_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[number-6][number.terrestream_indoor_air_quality_sensor_speaker_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Speaker volume',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.SLIDER: 'slider'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.terrestream_indoor_air_quality_sensor_speaker_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_settings_snapshot[select-3][select.terrestream_indoor_air_quality_sensor_device_language-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'en',
        'fr_ca',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.terrestream_indoor_air_quality_sensor_device_language',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Device language',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Device language',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'locale',
    'unique_id': '00000000-0000-4000-8000-000000000001_locale',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[select-3][select.terrestream_indoor_air_quality_sensor_device_language-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Device language',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'en',
        'fr_ca',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.terrestream_indoor_air_quality_sensor_device_language',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'en',
  })
# ---
# name: test_settings_snapshot[select-3][select.terrestream_indoor_air_quality_sensor_display_air_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'epa_aqi',
        'aqhi_plus',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.terrestream_indoor_air_quality_sensor_display_air_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display air index',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display air index',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'index_mode',
    'unique_id': '00000000-0000-4000-8000-000000000001_index_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[select-3][select.terrestream_indoor_air_quality_sensor_display_air_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Display air index',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'epa_aqi',
        'aqhi_plus',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.terrestream_indoor_air_quality_sensor_display_air_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'epa_aqi',
  })
# ---
# name: test_settings_snapshot[select-3][select.terrestream_indoor_air_quality_sensor_voc_presentation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'voc_index',
        'well',
        'reset',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.terrestream_indoor_air_quality_sensor_voc_presentation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VOC presentation',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VOC presentation',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'voc_mode',
    'unique_id': '00000000-0000-4000-8000-000000000001_voc_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[select-3][select.terrestream_indoor_air_quality_sensor_voc_presentation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor VOC presentation',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'voc_index',
        'well',
        'reset',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.terrestream_indoor_air_quality_sensor_voc_presentation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'voc_index',
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_24_hour_clock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_24_hour_clock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '24-hour clock',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '24-hour clock',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'time_24h',
    'unique_id': '00000000-0000-4000-8000-000000000001_time_24h',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_24_hour_clock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor 24-hour clock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_24_hour_clock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_automatic_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_automatic_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Automatic brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Automatic brightness',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_brightness',
    'unique_id': '00000000-0000-4000-8000-000000000001_auto_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_automatic_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Automatic brightness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_automatic_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_dark_theme-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_dark_theme',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dark theme',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dark theme',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dark_mode',
    'unique_id': '00000000-0000-4000-8000-000000000001_dark_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_dark_theme-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Dark theme',
    }),
    'context': <ANY>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_dark_theme',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_fahrenheit_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_fahrenheit_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fahrenheit display',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fahrenheit display',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fahrenheit',
    'unique_id': '00000000-0000-4000-8000-000000000001_fahrenheit',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_fahrenheit_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Fahrenheit display',
    }),
    'context': <ANY>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_fahrenheit_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_notification_sounds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_notification_sounds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Notification sounds',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Notification sounds',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notification_sounds',
    'unique_id': '00000000-0000-4000-8000-000000000001_notification_sounds',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_notification_sounds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Notification sounds',
    }),
    'context': <ANY>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_notification_sounds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_quiet_hours-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_quiet_hours',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Quiet hours',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Quiet hours',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'quiet_hours',
    'unique_id': '00000000-0000-4000-8000-000000000001_quiet_hours',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_quiet_hours-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Quiet hours',
    }),
    'context': <ANY>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_quiet_hours',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_touch_sounds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_touch_sounds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Touch sounds',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Touch sounds',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ui_sounds',
    'unique_id': '00000000-0000-4000-8000-000000000001_ui_sounds',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[switch-7][switch.terrestream_indoor_air_quality_sensor_touch_sounds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Touch sounds',
    }),
    'context': <ANY>,
    'entity_id': 'switch.terrestream_indoor_air_quality_sensor_touch_sounds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_settings_snapshot[text-1][text.terrestream_indoor_air_quality_sensor_device_time_zone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <TextEntityCapabilityAttribute.MAX: 'max'>: 63,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 1,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.terrestream_indoor_air_quality_sensor_device_time_zone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Device time zone',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Device time zone',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timezone',
    'unique_id': '00000000-0000-4000-8000-000000000001_timezone',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[text-1][text.terrestream_indoor_air_quality_sensor_device_time_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Device time zone',
      <TextEntityCapabilityAttribute.MAX: 'max'>: 63,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 1,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'text.terrestream_indoor_air_quality_sensor_device_time_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'UTC',
  })
# ---
# name: test_settings_snapshot[time-2][time.terrestream_indoor_air_quality_sensor_quiet_hours_end-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.terrestream_indoor_air_quality_sensor_quiet_hours_end',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Quiet hours end',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Quiet hours end',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'quiet_end',
    'unique_id': '00000000-0000-4000-8000-000000000001_quiet_end',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[time-2][time.terrestream_indoor_air_quality_sensor_quiet_hours_end-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Quiet hours end',
    }),
    'context': <ANY>,
    'entity_id': 'time.terrestream_indoor_air_quality_sensor_quiet_hours_end',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '07:00:00',
  })
# ---
# name: test_settings_snapshot[time-2][time.terrestream_indoor_air_quality_sensor_quiet_hours_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.terrestream_indoor_air_quality_sensor_quiet_hours_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Quiet hours start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Quiet hours start',
    'platform': 'terrestream_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'quiet_start',
    'unique_id': '00000000-0000-4000-8000-000000000001_quiet_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_settings_snapshot[time-2][time.terrestream_indoor_air_quality_sensor_quiet_hours_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Terrestream Indoor Air Quality sensor Quiet hours start',
    }),
    'context': <ANY>,
    'entity_id': 'time.terrestream_indoor_air_quality_sensor_quiet_hours_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22:00:00',
  })
# ---
